tests/errors/test-ref-no-init.script

int& a;

//>2:6: error C13: references must be initialized
